# static-webserver

./: .gitmodules  CMakeLists.txt  index.html  index.js  package.json  test.js
src/: compression.cc  compression.h  response.cc  response.h  webserver.cc  webserver.h
